doc: atualiza doc

--- a/redis-grafana/docker-compose.yml
+++ b/redis-grafana/docker-compose.yml
@@ -17,9 +17,13 @@ services:
     environment:
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_INSTALL_PLUGINS=redis-datasource
     networks:
       - my-network
 
 networks:
   my-network:
     driver: bridge
+
+volumes:
+  grafana-storage:
